--- a/src/public/stylesheet/Pay.css
+++ b/src/public/stylesheet/Pay.css
@@ -37,11 +37,13 @@ body {
     background-color: rgb(255, 255, 255);
     z-index: 1;
     border-bottom: 1px solid rgba(103, 98, 98, 0.3);
+
     li {
       list-style: none;
       text-decoration: none;
       padding-left: 25px;
     }
+
     .searchs {
       display: flex;
       margin-right: 123px;
@@ -61,10 +63,12 @@ body {
         height: 20px;
       }
     }
+
     .header-top {
       display: flex;
       justify-content: space-between;
       align-items: center;
+
       .logo {
         flex: 1.2;
         a {
@@ -75,6 +79,7 @@ body {
           }
         }
       }
+
       .menu {
         flex: 4;
         display: flex;
@@ -122,9 +127,11 @@ body {
           }
         }
       }
+
       .others {
         display: flex;
         flex: 1.2;
+        position: relative; /* Để form có thể định vị tương đối với .others */
         ion-icon {
           font-size: 25px;
           color: black;
@@ -147,233 +154,417 @@ body {
             }
           }
         }
-      }
-    }
-  }
-}
-/*------------------------PAY-------------------------------------- */
-.pay {
-  padding: 130px 0;
-  .container {
-    .pay-top-warp {
-      display: flex;
-      justify-content: center;
-      .pay-top {
-        height: 2px;
-        width: 70%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 50px 0 100px;
-        background-color: rgb(181, 180, 180);
-        .pay-top-moneycheck {
-          &.pay-top-item {
-            border: 3px solid rgb(60, 60, 234);
-            padding-right: 14px;
-          }
-        }
 
-        .pay-top-item {
-          width: 40px;
-          height: 40px;
-          border-radius: 50%;
-          border: 1px solid rgb(91, 82, 82);
-          display: flex;
-          align-items: center;
-          justify-items: center;
-          background-color: white;
-          img {
-            max-width: 25px;
+        /* Định dạng form thông tin người dùng */
+        .user-info-form {
+          display: none; /* Ẩn form mặc định */
+          position: fixed; /* Sử dụng fixed để cố định form trên màn hình */
+          top: 0; /* Bắt đầu từ đỉnh màn hình */
+          right: 0; /* Sát bên phải */
+          width: 400px; /* Chiều rộng cố định */
+          height: 100vh; /* Chiều cao bằng màn hình */
+          background-color: rgb(80, 69, 69); /* Màu nâu đậm làm nền */
+          z-index: 1000; /* Đảm bảo form nằm trên banner */
+          padding: 20px;
+          border-radius: 0; /* Bỏ bo góc để form trải dài */
+          transform: translateX(100%); /* Ẩn form ra ngoài bên phải */
+          transition: transform 0.3s ease; /* Hiệu ứng trượt mượt mà */
+
+          &.active {
+            display: block; /* Hiện form khi có class active */
+            transform: translateX(0); /* Trượt form vào màn hình */
+          }
+          .password-group {
+            position: relative;
+          }
+
+          .password-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+          }
+
+          .password-wrapper input {
             width: 100%;
-            margin-left: 7px;
-            color: #ddd;
+            padding-right: 40px; /* Để lại khoảng trống cho biểu tượng con mắt */
           }
-        }
-      }
-    }
-  }
-  .container {
-    .pay-content {
-      .pay-content-left {
-        width: 40%;
-        border-right: 2px solid rgb(91, 82, 82);
-        .pay-content-left-method-delivery {
-        }
-        .pay-content-left-method-payment {
-          margin-top: 10px;
-          .pay-content-left-method-payment-item {
-            margin-top: 10px;
+
+          .toggle-password {
+            position: absolute;
+            right: 10px;
+            cursor: pointer;
           }
-          .pay-content-left-method-payment-item-img {
-            img {
-              margin-top: -10px;
-              width: 100%;
-              max-width: 70px;
-            }
-            img:nth-child(2) {
-              width: 100%;
-              max-width: 100px;
-              margin-bottom: -15px;
-            }
+
+          .toggle-password ion-icon {
+            font-size: 20px;
+            color: #f5f5dc; /* Màu kem nhạt giống các thành phần khác trong form */
+            transition: color 0.3s ease;
           }
-          .pay-content-left-method-payment-item-img:nth-child(7) {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            img {
-              width: 100%;
-              max-width: 450px;
+
+          .toggle-password ion-icon:hover {
+            color: #fff; /* Chuyển sang trắng khi hover */
+          }
+          .r1 {
+            display: flex;
+            .user-img {
+              width: 125px;
+              height: 125px;
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
             }
           }
-          .pay-content-left-method-payment-item-input {
-            p {
-              margin-bottom: 7px;
+
+          .form-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+
+            h2 {
+              font-size: 18px;
+              margin: 0;
+              color: #f5f5dc; /* Màu chữ kem nhạt trên nền nâu */
             }
+
+            .close-form {
+              cursor: pointer;
+              font-size: 24px;
+              color: #f5f5dc; /* Màu chữ kem nhạt */
+              font-weight: bold;
+              transition: color 0.3s ease;
+
+              &:hover {
+                color: #fff; /* Chuyển sang trắng khi hover */
+              }
+            }
+          }
+
+          /* Định dạng các trường trong form */
+          form {
+            display: flex;
+            flex-direction: column; /* Sắp xếp các trường theo cột */
+          }
+
+          .form-group {
+            margin-bottom: 15px;
+            label {
+              display: block;
+              font-size: 14px;
+              color: #f5f5dc; /* Màu chữ kem nhạt */
+              margin-bottom: 5px;
+            }
+
             input {
+              width: 100%;
+              padding: 8px;
+              border-bottom: 3px solid #f5f5dc; /* Viền màu nâu nhạt */
+              border-radius: 3px;
+              font-size: 14px;
+              background-color: transparent; /* Màu nền input là màu kem nhạt */
+              color: #f5f5dc; /* Màu chữ trong input là màu nâu đậm */
+              margin-bottom: 10px;
+            }
+          }
+          .r1 {
+            .form-group {
+              margin-left: 20px;
+            }
+          }
+          .user-img-add {
+            margin-top: -22px;
+            margin-bottom: 15px;
+
+            input {
+              height: 27px;
+              width: 125px;
               padding: 5px;
-              margin: 5px 0;
-              height: 30px;
-              width: 200px;
+              text-align: center;
+              border-radius: 5px;
             }
-          }
-          .pay-content-left-method-payment-item-input {
-            display: none;
-          }
-          .pay-content-left-method-payment-item-input.block {
-            display: block;
-          }
-          .pay-content-left-method-payment-item:last-child {
-            margin-top: 20px;
-          }
-        }
-        a {
-          p {
-            margin-top: 15px;
-            color: rgb(91, 82, 82);
-          }
-        }
-      }
-      .pay-content-right {
-        width: 60%;
-        table {
-          margin-left: 20px;
-          text-align: center;
-          th {
-            padding-bottom: 30px;
-            font-size: 12px;
-            text-transform: uppercase;
-            color: rgba(91, 82, 82);
-            border-collapse: collapse;
-            border-bottom: 2px solid rgb(91, 82, 82);
-          }
-          p {
-            font-size: 12px;
-            color: rgba(91, 82, 82);
-            padding: 0 15px;
-          }
-
-          td {
-            padding: 10px 0;
-            border-bottom: 2px solid rgb(91, 82, 82);
-          }
-          td:nth-child(2) {
-            max-width: 130px;
-          }
-          td:nth-child(4) {
-            p,
-            sup {
-              display: inline;
+            margin-top: -22px;
+            margin-bottom: 15px;
+            label {
+              display: inline-block;
+              height: 27px;
+              width: 125px;
+              padding: 5px;
+              text-align: center;
+              border-radius: 5px;
+              background-color: #f5f5dc; /* Màu kem nhạt */
+              color: rgb(80, 69, 69); /* Màu nâu đậm */
+              cursor: pointer; /* Con trỏ chuột khi hover */
+              font-size: 14px;
+              line-height: 17px; /* Căn giữa chữ theo chiều dọc */
+              transition: background-color 0.3s ease;
             }
-          }
-          tr:nth-child(4) {
-            td:first-child {
-              text-align: left;
-            }
-            td:last-child {
-              p,
-              sup {
-                display: inline;
-              }
-            }
-          }
-          tr:nth-child(5) {
-            td:first-child {
-              text-align: left;
-            }
-            td:last-child {
-              p,
-              sup {
-                display: inline;
-              }
+            label:hover {
+              background-color: #fff; /* Chuyển sang trắng khi hover */
             }
           }
         }
       }
     }
   }
-}
+  /*------------------------PAY-------------------------------------- */
+  .pay {
+    padding: 130px 0;
+    .container {
+      .pay-top-warp {
+        display: flex;
+        justify-content: center;
+        .pay-top {
+          height: 2px;
+          width: 70%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin: 50px 0 100px;
+          background-color: rgb(181, 180, 180);
+          .pay-top-moneycheck {
+            &.pay-top-item {
+              border: 3px solid rgb(60, 60, 234);
+              padding-right: 14px;
+            }
+          }
 
-/* --------------------FOOTER-------------------------------------- */
-.footer {
-  border-top: 3px solid rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: center;
-  text-align: left;
-  padding: 0 0 50px 50px;
-  list-style: none;
-  li {
-    font-size: 15px;
-  }
-  p {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    color: rgb(88, 76, 76);
-  }
-  .contact,
-  .address,
-  .support {
-    width: 33%;
-  }
-  .contact {
-    padding-right: 170px;
-    padding-left: 50px;
-    margin-left: 50px;
-    margin-right: 30px;
-  }
-  .address {
-    padding-right: 170px;
-    padding-left: 50px;
-    li:not(:first-of-type) {
-      line-height: 35px;
-    }
-  }
-  .support {
-    margin-right: 30px;
-    .suport-cus {
-      li {
-        img {
-          width: 40px;
-          margin-left: 130px;
-          margin-right: 15px;
-        }
-        b {
-          font-size: 25px;
+          .pay-top-item {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid rgb(91, 82, 82);
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            background-color: white;
+            img {
+              max-width: 25px;
+              width: 100%;
+              margin-left: 7px;
+              color: #ddd;
+            }
+          }
         }
       }
+    }
+    .container {
+      .pay-content {
+        .pay-content-left {
+          width: 40%;
+          border-right: 2px solid rgb(91, 82, 82);
+          .pay-content-left-method-delivery {
+          }
+          .pay-content-left-method-payment {
+            margin-top: 10px;
+            .pay-content-left-method-payment-item {
+              margin-top: 10px;
+            }
+            .pay-content-left-method-payment-item-img {
+              img {
+                margin-top: -10px;
+                width: 100%;
+                max-width: 70px;
+              }
+              img:nth-child(2) {
+                width: 100%;
+                max-width: 100px;
+                margin-bottom: -15px;
+              }
+            }
+            .pay-content-left-method-payment-item-img:nth-child(7) {
+              margin-top: 20px;
+              margin-bottom: 10px;
+              img {
+                width: 100%;
+                max-width: 450px;
+              }
+            }
+            .pay-content-left-method-payment-item-input {
+              p {
+                margin-bottom: 7px;
+              }
+              input {
+                padding: 5px;
+                margin: 5px 0;
+                height: 30px;
+                width: 200px;
+              }
+            }
+            .pay-content-left-method-payment-item-input {
+              display: none;
+            }
+            .pay-content-left-method-payment-item-input.block {
+              display: block;
+            }
+            .pay-content-left-method-payment-item:last-child {
+              margin-top: 20px;
+            }
+          }
+          a {
+            p {
+              margin-top: 15px;
+              color: rgb(91, 82, 82);
+            }
+          }
+        }
+        .pay-content-right {
+          width: 60%;
+          display: flex; /* Thêm flex để dễ căn chỉnh */
+          flex-direction: column; /* Xếp các phần tử theo cột */
+          align-items: center;
+          table {
+            margin-left: 20px;
+            text-align: center;
+            th {
+              padding-bottom: 30px;
+              font-size: 12px;
+              text-transform: uppercase;
+              color: rgba(91, 82, 82);
+              border-collapse: collapse;
+              border-bottom: 2px solid rgb(91, 82, 82);
+            }
+            p {
+              font-size: 12px;
+              color: rgba(91, 82, 82);
+              padding: 0 15px;
+            }
+
+            td {
+              padding: 10px 0;
+              border-bottom: 2px solid rgb(91, 82, 82);
+            }
+            td:nth-child(2) {
+              max-width: 130px;
+            }
+            td:nth-child(4) {
+              p,
+              sup {
+                display: inline;
+              }
+            }
+            tr:nth-child(4) {
+              td:first-child {
+                text-align: left;
+              }
+              td:last-child {
+                p,
+                sup {
+                  display: inline;
+                }
+              }
+              td {
+                padding-top: 50px;
+              }
+            }
+            tr:nth-child(5) {
+              td:first-child {
+                text-align: left;
+              }
+              td:last-child {
+                p,
+                sup {
+                  display: inline;
+                }
+              }
+            }
+            tr:nth-child(6) {
+              td:first-child {
+                text-align: left;
+              }
+              td:last-child {
+                p,
+                sup {
+                  font-size: 16px;
+                  display: inline;
+                }
+              }
+            }
+          }
+          button {
+            margin-top: 30px;
+            padding: 0px 18px;
+            height: 35px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+            background-color: white;
+            color: black;
+            border: 2px solid rgb(91, 82, 82);
+          }
+          button:hover {
+            background-color: rgb(91, 82, 82);
+            color: white;
+          }
+        }
+      }
+    }
+  }
+
+  /* --------------------FOOTER-------------------------------------- */
+  .footer {
+    border-top: 3px solid rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    padding: 0 0 50px 50px;
+    list-style: none;
+    li {
+      font-size: 15px;
     }
     p {
-      text-align: left;
-      padding-left: 115px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      color: rgb(88, 76, 76);
     }
-    .social {
-      margin-left: 115px;
-      li {
-        display: inline-block;
-        img {
-          width: 100%;
-          max-width: 40px;
+    .contact,
+    .address,
+    .support {
+      width: 33%;
+    }
+    .contact {
+      padding-right: 170px;
+      padding-left: 50px;
+      margin-left: 50px;
+      margin-right: 30px;
+    }
+    .address {
+      padding-right: 170px;
+      padding-left: 50px;
+      li:not(:first-of-type) {
+        line-height: 35px;
+      }
+    }
+    .support {
+      margin-right: 30px;
+      .suport-cus {
+        li {
+          img {
+            width: 40px;
+            margin-left: 130px;
+            margin-right: 15px;
+          }
+          b {
+            font-size: 25px;
+          }
+        }
+      }
+      p {
+        text-align: left;
+        padding-left: 115px;
+      }
+      .social {
+        margin-left: 115px;
+        li {
+          display: inline-block;
+          img {
+            width: 100%;
+            max-width: 40px;
+          }
         }
       }
     }
