--- a/src/views/Delivery.ejs
+++ b/src/views/Delivery.ejs
@@ -82,10 +82,87 @@
             ></a>
           </li>
           <li>
-            <a href="http://localhost:8080/register" class="user"
+            <a href="#" class="user" id="user-icon"
               ><ion-icon name="person"></ion-icon>
               <p>Đăng nhập/ Đ.kí</p></a
             >
+            <!-- Form thông tin người dùng -->
+            <div class="user-info-form" id="user-info-form">
+              <div class="form-header">
+                <h2>Thông tin người dùng</h2>
+                <span class="close-form" id="close-form">&times;</span>
+              </div>
+              <form>
+                <div class="r1">
+                  <div class="user-img">
+                    <img src="" alt="" />
+                  </div>
+                  <div class="form-group">
+                    <label for="name">Tên:</label>
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      value="Phoebe :3"
+                      readonly
+                    />
+                    <label for="phone">Số điện thoại:</label>
+                    <input
+                      type="text"
+                      id="phone"
+                      name="phone"
+                      value="0901121130"
+                      readonly
+                    />
+                  </div>
+                </div>
+                <div class="user-img-add">
+                  <label for="image-upload">Sửa hình ảnh</label>
+                  <input
+                    type="file"
+                    id="image-upload"
+                    name="image-upload"
+                    accept="image/*"
+                    style="display: none"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    value="nguyenvana@example.com"
+                    readonly
+                  />
+                </div>
+                <div class="form-group password-group">
+                  <label for="password">Mật khẩu:</label>
+                  <div class="password-wrapper">
+                    <input
+                      type="password"
+                      id="password"
+                      name="password"
+                      value="squishy_phoebe"
+                      readonly
+                    />
+                    <span class="toggle-password">
+                      <ion-icon name="eye" class="eye-icon"></ion-icon>
+                    </span>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="address">Địa chỉ:</label>
+                  <input
+                    type="text"
+                    id="address"
+                    name="address"
+                    value="123 Đường ABC, Quận 1, TP.HCM"
+                    readonly
+                  />
+                </div>
+              </form>
+            </div>
           </li>
         </div>
       </div>
