--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,30 +1,30 @@
-@import '~bootstrap/scss/bootstrap';
-@import './variables';
+@import "~bootstrap/scss/bootstrap";
+@import "./variables";
 
-body {
-  margin: 0;
-  font-family: $font-family;
-}
+// body {
+//   margin: 0;
+//   font-family: $font-family;
+// }
 
-header {
-  background: #333;
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
+// header {
+//   background: #333;
+//   color: white;
+//   padding: 10px;
+//   text-align: center;
+// }
 
-nav a {
-  color: white;
-  margin: 0 10px;
-  text-decoration: none;
-}
+// nav a {
+//   color: white;
+//   margin: 0 10px;
+//   text-decoration: none;
+// }
 
-footer {
-  background: #333;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
+// footer {
+//   background: #333;
+//   color: white;
+//   text-align: center;
+//   padding: 10px;
+//   position: fixed;
+//   bottom: 0;
+//   width: 100%;
+// }
