--- a/src/containers/AdminPage/admin.scss
+++ b/src/containers/AdminPage/admin.scss
@@ -49,7 +49,46 @@
             padding: 0.6rem 1.5rem;
         }
     }
+    .btn-logout {
+        position: absolute;
+        right: 20px;
+        top: 7px;
+        appearance: none;
+        background-color: #ffffff;
+        border-radius: 40em;
+        border-style: none;
+        box-shadow: hsl(215, 100%, 84%) 0 -12px 6px inset;
+        box-sizing: border-box;
+        color: #000000;
+        cursor: pointer;
+        font-family: -apple-system, sans-serif;
+        font-size: 1rem;
+        font-weight: 700;
+        letter-spacing: -0.24px;
+        outline: none;
+        padding: 0.8rem 1rem;
+        text-align: center;
+        text-decoration: none;
+        transition: all 0.15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
 
+        &:hover {
+            background-color: #ffc229;
+            box-shadow: #ff6314 0 -6px 8px inset;
+            transform: scale(1.125);
+        }
+
+        &:active {
+            transform: scale(1.025);
+        }
+
+        @media (min-width: 768px) {
+            font-size: 1.2rem;
+            padding: 0.6rem 1.5rem;
+        }
+    }
     .users-table {
         width: 100%;
         margin: 0;
